feat: Working login screen!